@@ -41,3 +41,10 @@ There are some global options for the setup file:
   specify a name for themselves, and the \[[!meta author]] and
   \[[!meta authorurl]] directives will not be overridden by the comments
   plugin
+
+## comment moderation
+
+If you enable the [[blogspam]] plugin, comments that appear spammy will be
+held for moderation. These comments are stored in
+`.ikiwiki/comments_pending/`, and can be deleted, or moved into the
+wiki's srcdir to be posted.
